Upgrade to latest webpack / babel versions

--- a/src/main.html
+++ b/src/main.html
@@ -1,13 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="author" content="cTn"/>
-    <link type="text/css" rel="stylesheet" href="/public/css/main.css" media="all"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="author" content="cTn" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="/public/css/main.css"
+      media="all"
+    />
     <title>React Chrome Extension</title>
-</head>
-<body>
-  <div id="root">Loading...</div>
-  <script type="text/javascript" src="/dist/bundle.js"></script>
-</body>
+  </head>
+  <body>
+    <div id="root">Loading...</div>
+  </body>
 </html>
