--- a/src/main.html
+++ b/src/main.html
@@ -9,7 +9,7 @@
       href="/public/css/main.css"
       media="all"
     />
-    <title>React Chrome Extension</title>
+    <title>React Browser Extension</title>
   </head>
   <body>
     <div id="root">Loading...</div>
